Version: 4.1.30
Date: 2022.07.05
  Changes:
    - BuildGen:setBurner() adds a burnt_inventory slot by default now
  Bugfixes:
    - Fixed a typo in omni.lib.replace_recipe_result() affecting recipe.expensive
    - Make sure to check all ings/results for both difficulties for nametags in standardisation
---------------------------------------------------------------------------------------------------
Version: 4.1.29
Date: 2022.06.10
  Bugfixes:
    - Fixed load order issue from some missing dependencies
    - Fixed misleading error message in some cases
---------------------------------------------------------------------------------------------------
Version: 4.1.27
Date: 2022.05.31
  Changes:
    - omni.lib.add_ore_tint() now checks the resource map color when the specified ore is not in
      our lookup table
    - Remove the deprecated lua function calls
---------------------------------------------------------------------------------------------------
Version: 4.1.26
Date: 2022.05.01
  Bugfixes:
    - Fixed a typo causing a wrong icons_size in ItemGen:addMask()
---------------------------------------------------------------------------------------------------
Version: 4.1.25
Date: 2022.02.14
  Bugfixes:
    - Fixed compressed tech variants sometimes being hidden
---------------------------------------------------------------------------------------------------
Version: 4.1.24
Date: 2022.02.05
  Bugfixes:
    - Fixed some more tech unlock shenanigans
  Changes:
    - Moved omnidate and omnidatefull to proper chat commands that you can tab complete
---------------------------------------------------------------------------------------------------
Version: 4.1.23
Date: 2022.02.05
  Bugfixes:
    - Fixed an icon scaling issue with technology icons with a scale factor on the first layer
    - Fixed an issue where some recipes or tech effects wouldn't unlock (matter, compression)